--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App{
-  background-color: rgb(255, 255, 255);
+  background-color: #000;
   min-height: 100vh;
   text-align: center;
 
@@ -12,3 +12,17 @@
   display: flex;
 }
 
+.nav-link{
+  color:var(--primary-color);
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 23px;
+  margin:10px;
+  opacity: .6;
+  padding-bottom: 10px;
+}
+
+.nav-link.active{
+  opacity: 1;
+  border-bottom: solid 1px var(--primary-color);
+}
