--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 .App{
   background-color: #000;
   min-height: 100vh;
@@ -9,8 +10,11 @@
 }
 
 .content{
-  display: flex;
-}
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
+  }
+
+
 
 .nav-link{
   color:var(--primary-color);
