--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,81 +1,65 @@
-.title{
-    color: var(--primary-color);
-    padding-top: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 100;
-    font-variant: small-caps;
-    text-align: start;
-    position: relative;
-    margin-left: 20px;
-}
-
 .card{
     background-color:var(--background-item-color);
-    color:#fff;
-    max-width: 450px;
-    max-height: 400px;
-    border-radius: 010px;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    max-width: 220px;
     margin: 15px;
-    flex-direction: column
+    border-radius: 10px 10px 0px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.title{
+    color: #fff;
+    font-size: 20px;
+    display: flex;
+    justify-content: left;
+    margin: 5px 0px 5px 0px;
 }
 
 .poster-image{
-    background-image: url('../../images/travis.png');
     background-repeat: no-repeat;
-    background-size: 200px;
-    padding: 100px 100px;
-    margin-left: 20px;
+    background-size: 220px;
+    padding: 120px 110px;
+    height: 90px;
+    border-radius: 10px 10px 0px 0px;
 }
 
-.ig{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+.fav-btn{
+    position: absolute;
+    left: 10px;
+    padding: 10px;
 }
-
-.amount{
-    font-size: 13px;
-    color:rgb(167, 163, 163);
-    font-weight: lighter;
-}
-
-.joined{
-    font-size: 13px;
-    color:rgb(167, 163, 163);
-}
-
-.text{
-    display: flex;
-    flex-direction: column;
-    margin: 0px 30px 0px 30px;
-  }
-
-  .ctnFlex{
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .btn-view-twitter{
-      background-color: #d2d7d6;
-      display: flex;
-      border-radius: 8px;
-      padding: 5px;
-      color: var(--primary-color);
-      font-variant: small-caps;
-      margin: 14px;
-      justify-content: center;
-      text-decoration: none;
-  }
-
-  .btn-follow-us{
-    background-color: #d2d7d6;
-    display: flex;
-    border-radius: 8px;
+.card-detail{
+    text-align: left;
     padding: 5px;
-    color: var(--primary-color);
-    font-variant: small-caps;
-    margin: 14px;
-    margin-bottom: 10px;
+    color: #fff;
+    margin: 5px;
+}
+
+.card-detail span{
+    color: #ff0;  
+}
+
+.card-detail h2{
+    text-align: left;
+    font-size: 15px;
+}
+
+.card-detail h2, h1{
+margin: 0px;
+}
+.btn-detail{
+    background-color:var(--primary-color);
+    color: #fff;
+    border-radius: 10px;
+    display: flex;
+    margin: 10px;
     justify-content: center;
+    padding: 10px;
+    align-items: center;
     text-decoration: none;
-  }
+    
+}
+.button{
+    position: relative;
+    bottom:0;
+}
