--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,13 +5,27 @@
     justify-content: space-between;
 }
 
-.Header input{
+.Header form input{
 border-radius: 3px;    
 border: 0;
 width: 400px;
+height: 2rem;
 margin: 10px;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 20px;
+}
+
+.Header form button{
+    background-color: var(--primary-color);
+    border: none;
+    border-radius: 8px;
+    width: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    cursor: pointer;
+    
 }
 
 .Logo {
