--- a/src/pages/about/About.css
+++ b/src/pages/about/About.css
@@ -1,18 +1,22 @@
+.content-about{
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
 .title{
-    font-size: 30px;
-    color:var(--primary-color);
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
+  display: flex;
+  align-items: center;
+  font-size: 30px;
+  color:var(--primary-color);
 }
 
 .description{
-    display: flex;
-  justify-content: center;
-  align-items: center;
-  width:600px;
-  height:100px;
-  margin:auto;
-  font-family:Arial;
-  color:#fff; 
+display: flex;
+align-items: center;
+width:600px;
+height:100px;
+font-family:Arial;
+color:#fff;
+margin-left: 20px; 
 }
