--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -5,6 +5,7 @@
     margin: 15px;
     border-radius: 10px 10px 0px 0px;
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
 }
 
 .title{
