--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,6 +5,10 @@
     justify-content: space-between;
 }
 
+.link{
+    text-decoration: none;
+}
+
 .Header form input{
 border-radius: 3px;    
 border: 0;
