--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,9 @@
 }
 
 .content{
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(250px, 1fr));
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
   }
 
 
